# brain

./: .gitignore  LICENSE  README.md  pyproject.toml
src/brain/: cli.py  llm.py  store.py  usage.py
tests/: test_basic.py  test_usage.py
