[project]
name = "brain"
version = "0.1.0"
description = "A local CLI journal with LLM-powered search and reflection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "anthropic>=0.39",
    "rich>=13.7",
    "prompt-toolkit>=3.0",
]

[project.scripts]
brain = "brain.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brain"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
